src/test/resources/purescript_examples/failing/DeclConflictTypeClass.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith DeclConflict\n')
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(ModuleName)
        PSASTWrapperElement(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(NamedBinder)
        <empty list>
      PSASTWrapperElement(TypeClassDeclaration)
        PsiElement(class)('class')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(TypeConstructor)
          PSASTWrapperElement(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Fail')
              PsiElement(whitespace)('\n\n')
        PSASTWrapperElement(Implies)
          <empty list>
      PSASTWrapperElement(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(TypeConstructor)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('Fail')
            PsiElement(whitespace)('\n')
        PSASTWrapperElement(TypeArgs)
          <empty list>
